syntax = "proto3";

option go_package = "proto/kvdbserver";

package kvdbserverapi;

message SetStringRequest {
    // Key used to store the value.
    string key = 1;
    // Value to store.
    string value = 2;
}

message SetStringResponse {}

message GetStringRequest {
    // Key used to get the value.
    string key = 1;
}

message GetStringResponse {
    // Returned value.
    string value = 1;
    // True if key exists. False otherwise.
    bool found = 2;
}

message DeleteKeyRequest {
    // Key to delete.
    string key = 1;
}

message DeleteKeyResponse {
    // True if key was deleted. False if it doesn't exist.
    bool ok = 1;
}

message DeleteAllKeysRequest {}

message DeleteAllKeysResponse {}

message GetKeysRequest {}

message GetKeysResponse {
    // List of returned keys.
    repeated string keys = 1;
}

service StorageService {
    // SetString sets a string value using a key.
    rpc SetString(SetStringRequest) returns (SetStringResponse) {}
    // GetString gets a string value using a key.
    rpc GetString(GetStringRequest) returns (GetStringResponse) {}
    // DeleteKey deletes a key and its value.
    rpc DeleteKey(DeleteKeyRequest) returns (DeleteKeyResponse) {}
    // DeleteAllKeys deletes all the keys of a database.
    rpc DeleteAllKeys(DeleteAllKeysRequest) returns (DeleteAllKeysResponse) {}
    // GetKeys returns all the keys of a database.
    rpc GetKeys(GetKeysRequest) returns (GetKeysResponse) {}
}